--- a/src/app/main-pages/board/board.component.scss
+++ b/src/app/main-pages/board/board.component.scss
@@ -4,13 +4,13 @@
 
 .board-wrapper {
   overflow: auto;
-  height: calc(100vh - 100px);
+  height: calc(100vh - 96px);
 }
 
 .board-container {
   padding: 20px;
   padding-right: 0;
-  height: calc(100vh - 100px);
+  height: calc(100vh - 96px);
 }
 
 .board-header {
